Refactor RecipeRepository to remove unused methods and dependencies, enhancing code clarity and maintainability