@@ -6,13 +6,10 @@ import ch.primeo.fridgely.model.Recipe;
 import ch.primeo.fridgely.service.localization.AppLocalizationService;
 import com.querydsl.jpa.impl.JPAQueryFactory;
 import jakarta.persistence.EntityManager;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -37,6 +34,7 @@ public class RecipeRepository {
     private final QRecipe qRecipe = QRecipe.recipe;
     private final QRecipeIngredient qRecipeIngredient = QRecipeIngredient.recipeIngredient;
 
+    @Autowired
     public RecipeRepository(AppLocalizationService localization, FridgeStockRepository stockRepo,
             RecipeJpaRepository recipeJpaRepo, EntityManager entityManager) {
         this.localizationService = localization;
@@ -45,40 +43,15 @@ public class RecipeRepository {
         this.queryFactory = new JPAQueryFactory(entityManager);
     }
 
-    // Remove JDBC helper methods (createRecipeFromResultSet, parseIngredients)
-
-    /**
-     * Returns a single recipe by its ID with localized name/description and availability.
-     *
-     * @param recipeId the recipe ID
-     * @return An Optional containing the Recipe DTO, or empty if not found.
-     */
-    @Transactional(readOnly = true)
-    public Optional<RecipeDTO> getRecipeById(int recipeId) {
-        String language = localizationService.getLanguage();
-
-        try {
-            // Fetch basic recipe info
-            Recipe recipe = queryFactory.selectFrom(qRecipe).where(qRecipe.recipeId.eq(recipeId)).fetchOne();
-
-            if (recipe == null) {
-                return Optional.empty();
-            }
-
-            // Fetch ingredients for the recipe
-            List<String> ingredientBarcodes = getRecipeIngredientBarcodes(recipeId);
-
-            // Get stock info
-            Set<String> barcodesInStock = fridgeStockRepository.getAllBarcodesInStockAsSet();
-
-            // Create and populate DTO
-            RecipeDTO dto = createRecipeDTO(recipe, ingredientBarcodes, barcodesInStock, language);
-            return Optional.of(dto);
-
-        } catch (Exception e) {
-            LOGGER.severe("Error fetching recipe by ID " + recipeId + ": " + e.getMessage());
-            return Optional.empty();
-        }
+    // Constructor for testing only
+    protected RecipeRepository(AppLocalizationService localizationService,
+            FridgeStockRepository fridgeStockRepository,
+            RecipeJpaRepository recipeJpaRepository,
+            JPAQueryFactory queryFactory) {
+        this.localizationService = localizationService;
+        this.fridgeStockRepository = fridgeStockRepository;
+        this.recipeJpaRepository = recipeJpaRepository;
+        this.queryFactory = queryFactory;
     }
 
     /**
@@ -133,41 +106,6 @@ public class RecipeRepository {
         }
     }
 
-    // getRecipesByAvailabilityCategories might need rethinking with DTOs or separate queries
-    // This implementation provides a basic structure but might be inefficient.
-
-    /**
-     * Returns recipes categorized by how many of the given ingredients they use. Note: This implementation fetches all
-     * recipes and then categorizes them in memory. Consider optimizing if performance is critical.
-     *
-     * @param scannedBarcodes list of scanned ingredient barcodes
-     * @return a map of match count to list of Recipe DTO objects
-     */
-    @Transactional(readOnly = true)
-    public Map<Integer, List<RecipeDTO>> getRecipesByAvailabilityCategories(List<String> scannedBarcodes) {
-        Set<String> scannedBarcodesSet = new HashSet<>(scannedBarcodes);
-        List<RecipeDTO> allRecipeDTOs = getAllRecipes(); // Reuse existing method
-        Map<Integer, List<RecipeDTO>> categories = new HashMap<>();
-
-        for (RecipeDTO dto : allRecipeDTOs) {
-            int matchCount = 0;
-            List<String> requiredIngredients = getRecipeIngredientBarcodes(dto.getRecipeId());
-            for (String ingredient : requiredIngredients) {
-                if (scannedBarcodesSet.contains(ingredient)) {
-                    matchCount++;
-                }
-            }
-            categories.computeIfAbsent(matchCount, k -> new ArrayList<>()).add(dto);
-        }
-
-        // Ensure all categories from 0 to scannedBarcodes.size() exist, even if empty
-        for (int i = 0; i <= scannedBarcodes.size(); i++) {
-            categories.putIfAbsent(i, new ArrayList<>());
-        }
-
-        return categories;
-    }
-
     /**
      * Finds a Recipe entity by its ID.
      *
@@ -184,22 +122,6 @@ public class RecipeRepository {
         }
     }
 
-    /**
-     * Returns all Recipe entities directly from the database. This is a simplified method that doesn't include
-     * availability information.
-     *
-     * @return a list of Recipe entities
-     */
-    @Transactional(readOnly = true)
-    public List<Recipe> getAllRecipesEntities() {
-        try {
-            return recipeJpaRepository.findAll();
-        } catch (Exception e) {
-            LOGGER.severe("Error fetching all recipe entities: " + e.getMessage());
-            return List.of();
-        }
-    }
-
     // --- Helper Methods --- //
 
     /**
@@ -208,12 +130,12 @@ public class RecipeRepository {
     private RecipeDTO createRecipeDTO(Recipe recipe, List<String> ingredientBarcodes, Set<String> barcodesInStock,
             String language) {
         List<String> availableIngredients = ingredientBarcodes.stream().filter(barcodesInStock::contains)
-                .collect(Collectors.toList());
+                .toList();
 
         return new RecipeDTO(recipe.getRecipeId(), recipe.getLocalizedName(language),
                 // Use localization method from entity
                 recipe.getLocalizedDescription(language), // Use localization method from entity
-                availableIngredients.size(), ingredientBarcodes.size(), availableIngredients);
+                availableIngredients.size(), ingredientBarcodes.size());
     }
 
     // --- DTO Class --- //
@@ -228,16 +150,13 @@ public class RecipeRepository {
         private final String description;
         private final int availableIngredientCount;
         private final int totalIngredientCount;
-        private final List<String> availableIngredients;
 
-        public RecipeDTO(int id, String nameE, String descriptionE, int availableIngredient, int totalIngredient,
-                List<String> availableIngredientsList) {
+        public RecipeDTO(int id, String nameE, String descriptionE, int availableIngredient, int totalIngredient) {
             this.recipeId = id;
             this.name = nameE;
             this.description = descriptionE;
             this.availableIngredientCount = availableIngredient;
             this.totalIngredientCount = totalIngredient;
-            this.availableIngredients = Collections.unmodifiableList(availableIngredientsList); // Make list immutable
         }
 
         // Getters for all fields
@@ -251,18 +170,6 @@ public class RecipeRepository {
 
         public String getDescription() {
             return description;
-        }
-
-        public int getAvailableIngredientCount() {
-            return availableIngredientCount;
-        }
-
-        public int getTotalIngredientCount() {
-            return totalIngredientCount;
-        }
-
-        public List<String> getAvailableIngredients() {
-            return availableIngredients;
         }
 
         @Override
